# quantgarage.io

./: pelicanconf.py  pyproject.toml
content/: welcome.rst
output/: archives.html  authors.html  categories.html  index.html  tags.html  welcome.html
output/author/: quantgarage.html
output/category/: intro.html
output/tag/: welcome.html
