[tool.poetry]
name = "quantgarage.io"
version = "0.1.0"
description = ""
authors = ["Glen Goodwin <losttenko@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pelican = "^4.7.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
